Update styles on buttons and fix flex
Website was not showing all of the page titles and left
other details.

Changing flex helped fix the problem, and update the
buttons. Also changed the size of the grid.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 html, body{
   display: flex;
+  flex: 0 1 auto;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -28,6 +29,7 @@ html, body{
   justify-content: space-between;
   width: 1250px;
   height: auto;
+  margin-bottom: 10px;
 }
 .size{
   padding: 10px 20px;
@@ -39,7 +41,7 @@ html, body{
 
 .container{
   width: 960px;
-  height: 960px;
+  height: 500px;
   border: 3px #374649 solid;
   display: flex;
   flex-direction: column;
@@ -60,4 +62,12 @@ html, body{
   flex: 1;
   margin: 0;
   padding: 0;
+}
+
+.blackBtn, .randomBtn{
+  background-color: #374649;
+  color: white;
+  border-radius: 6px;
+  border-style: none;
+  padding: 6px;
 }
